<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="137dp"
        android:layout_height="38dp"
        android:layout_alignStart="@id/textView4"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="398dp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="90sp"
        android:text="@string/tap_here_to_shoot_bullets"
        android:textColor="#1A237E"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/play"
        android:layout_below="@id/highScoreTxt"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/bungee_shade"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/FUNTIME_FLYTIME"
        android:textColor="#B71C1C"
        android:textSize="46sp"
        android:textStyle="bold"
        tools:text="Fun Time-Fly Time" />

    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/diplomata"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/high_score"
        android:id="@+id/highScoreTxt"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"/>

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:id="@+id/volumeCtrl"
        android:src="@drawable/ic_volume_up_black_24dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/devloped_by_jayraj_kanzariya"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#B71C1C"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5sp"
        android:text="version 3.6.0.1"
        android:textAlignment="center"
        android:textColor="#FD3535"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/play"
        android:layout_centerInParent="true"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:fontFamily="@font/creepster"
        android:text="STAY home STay safe"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#E60000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30sp"
        android:layout_marginBottom="90sp"
        android:text="@string/long_press_here_to_go_upside"
        android:textColor="#1A237E"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>